@@ -132,6 +132,8 @@ public:
   virtual int is_widget() const;
   virtual int is_button() const;
   virtual int is_input() const;
+  virtual int is_value_input() const;
+  virtual int is_text_display() const;
   virtual int is_valuator() const;
   virtual int is_spinner() const;
   virtual int is_menu_item() const;
